Truncate text for Review item component + fixes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -132,6 +132,7 @@ ul {
 
 .Content-block {
   margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 .Home-content {
@@ -150,7 +151,7 @@ ul {
 }
 
 .Bold-point {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .Default-link {
