--- a/src/css/Review.css
+++ b/src/css/Review.css
@@ -35,6 +35,8 @@
     align-items: start;
     width: 65vw;
     margin: auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .Review-block > * {
@@ -52,16 +54,33 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    width: 61vw;
 }
 
 .Review-text {
-    border: 1px solid #bababa;
+    background-color: #ffffff;
     padding: 7px;
     border-radius: 6px;
+    line-height: 25px;
+    color: #242424;
+    text-align: start;
 }
 
 .Review-rating-stars-block {
     display: flex;
     align-items: center;
+}
+
+.Truncate-review-text p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 96%;
+}
+
+.Review-action-btns-block {
+    display: flex;
+    gap: 12px;
+    justify-content: center;
 }
   
